--- a/privacy.html
+++ b/privacy.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/jquery.ccpicker.css">
 </head>
 
 <body>
@@ -134,45 +133,92 @@
     </header>
     <!-- main wrapper -->
     <main>
-        <section class="auth_section">
-            <div class="container p-0">
-                <div class="row m-0 justify-content-center">
-                    <div class="col-lg-7 col-12 p-2">
-                        <div class="auth_form">
-                            <div class="title">
-                                <h4>Account Type</h4>
-                                <p>select your team size</p>
-                            </div>
-                            <form action="company-signup.html">
-                                <div class="row m-0 mb-4">
-                                    <div class="col-lg-6 col-12 p-2">
-                                        <label for="individual" class="select_type">
-                                            <input type="radio" name="account_type" id="individual" checked>
-                                            <div class="content">
-                                                <img src="assets/images/individual.svg" alt="individual">
-                                                <h6>Individual</h6>
-                                                <p>I’ll manage my account alone</p>
-                                            </div>
-                                        </label>
-                                    </div>
-                                    <div class="col-lg-6 col-12 p-2">
-                                        <label for="company" class="select_type">
-                                            <input type="radio" name="account_type" id="company">
-                                            <div class="content">
-                                                <img src="assets/images/company.svg" alt="individual">
-                                                <h6>Company</h6>
-                                                <p>I have a company for labor recruitment</p>
-                                            </div>
-                                        </label>
-                                    </div>
-                                </div>
-                                <button class="save_btn">
-                                    Confirm
-                                </button>
-                            </form>
+        <section class="terms">
+            <div class="container">
+                <h1>Privacy Policy</h1>
+                <p>Last Updated: <span>10-10-2023</span></p>
+                <p class="mb-4">
+                    Welcome to our website "MyService". We take privacy seriously and are committed to protecting your
+                    personal information. This privacy policy outlines how we collect, use, and store your information.
+                    By using our website, you agree to this policy.
+                </p>
+                <ul>
+                    <li>
+                        <h2>1. Usage</h2>
+                        <div class="text">
+                            <p>1.1. You must be 18 years or older to use our website.</p>
+                            <p>1.2. Our website must not be used for any unlawful activity or violation of intellectual
+                                property rights of others.</p>
                         </div>
-                    </div>
-                </div>
+                    </li>
+                    <li>
+                        <h2>2. Account</h2>
+                        <div class="text">
+                            <p>2.1. When registering on our website, you are responsible for maintaining the
+                                confidentiality of your account information and password.</p>
+                            <p>2.2. You must not share your account information with others or make it available to
+                                third parties.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <h2>3. Orders and Payments</h2>
+                        <div class="text">
+                            <p>3.1. Upon acceptance of your order on our website, you will complete the payment process
+                                using the available methods.</p>
+                            <p>3.2. The invoice amount must be paid in full before the products are delivered.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <h2>4. Delivery</h2>
+                        <div class="text">
+                            <p>4.1. We will deliver the products to the address specified by you within the agreed upon
+                                time.</p>
+                            <p>4.2. We are not responsible for any delivery delays due to circumstances beyond our
+                                control.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <h2>5. Returns and Refunds</h2>
+                        <div class="text">
+                            <p>5.1. We offer a refund service in case of product damage or non-conformity with the
+                                description.</p>
+                            <p>5.2. You must inform us of any complaints or refund requests within a specified time
+                                period.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <h2>6. Intellectual Property</h2>
+                        <div class="text">
+                            <p>6.1. All intellectual property rights related to the content and trademarks on our
+                                website are reserved and belong to our company.</p>
+                            <p>6.2. You must not copy, distribute, or use any content from our website without prior
+                                permission.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <h2>7. Service Termination</h2>
+                        <div class="text">
+                            <p>7.1. We reserve the right to terminate our services for any client who violates these
+                                terms and conditions.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <h2>8. Changes to Terms and Conditions</h2>
+                        <div class="text">
+                            <p>8.1. We reserve the right to modify these terms and conditions at any time. You are
+                                required to review them periodically.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <h2>9. Contact Us</h2>
+                        <div class="text">
+                            <p>
+                                9.1. If you have any questions or inquiries regarding the terms of service, please
+                                contact us through the available communication channels on our website.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
@@ -210,7 +256,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="contact-us.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="contact-us.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Contact us
                                 </a>
                             </li>
@@ -220,7 +267,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="privacy.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="privacy.html"><span><i
+                                            class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Privacy & Policy
                                 </a>
                             </li>
@@ -273,7 +321,6 @@
                                             App Store
                                         </p>
                                     </div>
-
                                 </a>
                             </li>
                             <li>
@@ -286,7 +333,6 @@
                                             Google Play
                                         </p>
                                     </div>
-
                                 </a>
                             </li>
                         </ul>
