--- a/resumes.html
+++ b/resumes.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/jquery.ccpicker.css">
 </head>
 
 <body>
@@ -134,43 +133,162 @@
     </header>
     <!-- main wrapper -->
     <main>
-        <section class="auth_section">
-            <div class="container p-0">
-                <div class="row m-0 justify-content-center">
-                    <div class="col-lg-7 col-12 p-2">
-                        <div class="auth_form">
-                            <div class="title">
-                                <h4>Account Type</h4>
-                                <p>select your team size</p>
-                            </div>
-                            <form action="company-signup.html">
-                                <div class="row m-0 mb-4">
-                                    <div class="col-lg-6 col-12 p-2">
-                                        <label for="individual" class="select_type">
-                                            <input type="radio" name="account_type" id="individual" checked>
-                                            <div class="content">
-                                                <img src="assets/images/individual.svg" alt="individual">
-                                                <h6>Individual</h6>
-                                                <p>I’ll manage my account alone</p>
-                                            </div>
-                                        </label>
-                                    </div>
-                                    <div class="col-lg-6 col-12 p-2">
-                                        <label for="company" class="select_type">
-                                            <input type="radio" name="account_type" id="company">
-                                            <div class="content">
-                                                <img src="assets/images/company.svg" alt="individual">
-                                                <h6>Company</h6>
-                                                <p>I have a company for labor recruitment</p>
-                                            </div>
-                                        </label>
-                                    </div>
+        <section class="create_resume">
+            <div class="container">
+                <div class="row m-0">
+                    <div class="col-12 p-2">
+                        <a href="create-resume.html" class="wrapper">
+                            <div class="thumb"></div>
+                            <div class="content">
+                                <div>
+                                    <h1>Easily add individuals resumes</h1>
+                                    <p>
+                                        Add now and expand your business scope.
+                                    </p>
                                 </div>
-                                <button class="save_btn">
-                                    Confirm
+                                <div class="avatar">
+                                    <img src="assets/images/individ.png" alt="">
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="latest_cvs">
+            <div class="container">
+                <div class="row m-0">
+                    <div class="col-lg-4 col-md-6 col-12 p-2">
+                        <a href="profile.html" class="profile_card">
+                            <div class="img">
+                                <img src="assets/images/friend-7.jpg" alt="">
+                            </div>
+                            <div class="owner">
+                                <h6>Mahmoud Elkomy</h6>
+                                <div class="title_age">
+                                    <span>Senior UI/UX</span>
+                                    <span>27 years old</span>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button>
+                                    <img src="assets/images/edit.svg" alt="">
                                 </button>
-                            </form>
-                        </div>
+                                <button>
+                                    <img src="assets/images/trash.svg" alt="">
+                                </button>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 p-2">
+                        <a href="profile.html" class="profile_card">
+                            <div class="img">
+                                <img src="assets/images/friend-8.jpg" alt="">
+                            </div>
+                            <div class="owner">
+                                <h6>Hassan Ibrahim</h6>
+                                <div class="title_age">
+                                    <span>Project Manager</span>
+                                    <span>34 years old</span>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button>
+                                    <img src="assets/images/edit.svg" alt="">
+                                </button>
+                                <button>
+                                    <img src="assets/images/trash.svg" alt="">
+                                </button>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 p-2">
+                        <a href="profile.html" class="profile_card">
+                            <div class="img">
+                                <img src="assets/images/friend-12.jpg" alt="">
+                            </div>
+                            <div class="owner">
+                                <h6>Mahmoud Elkomy</h6>
+                                <div class="title_age">
+                                    <span>Senior UI/UX</span>
+                                    <span>27 years old</span>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button>
+                                    <img src="assets/images/edit.svg" alt="">
+                                </button>
+                                <button>
+                                    <img src="assets/images/trash.svg" alt="">
+                                </button>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 p-2">
+                        <a href="profile.html" class="profile_card">
+                            <div class="img">
+                                <img src="assets/images/friend-5.jpg" alt="">
+                            </div>
+                            <div class="owner">
+                                <h6>Hala Hassan</h6>
+                                <div class="title_age">
+                                    <span>Senior UI/UX</span>
+                                    <span>27 years old</span>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button>
+                                    <img src="assets/images/edit.svg" alt="">
+                                </button>
+                                <button>
+                                    <img src="assets/images/trash.svg" alt="">
+                                </button>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 p-2">
+                        <a href="profile.html" class="profile_card">
+                            <div class="img">
+                                <img src="assets/images/friend-10.jpg" alt="">
+                            </div>
+                            <div class="owner">
+                                <h6>Hala Hassan</h6>
+                                <div class="title_age">
+                                    <span>Senior UI/UX</span>
+                                    <span>27 years old</span>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button>
+                                    <img src="assets/images/edit.svg" alt="">
+                                </button>
+                                <button>
+                                    <img src="assets/images/trash.svg" alt="">
+                                </button>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 p-2">
+                        <a href="profile.html" class="profile_card">
+                            <div class="img">
+                                <img src="assets/images/friend-9.jpg" alt="">
+                            </div>
+                            <div class="owner">
+                                <h6>Hala Hassan</h6>
+                                <div class="title_age">
+                                    <span>Senior UI/UX</span>
+                                    <span>27 years old</span>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button>
+                                    <img src="assets/images/edit.svg" alt="">
+                                </button>
+                                <button>
+                                    <img src="assets/images/trash.svg" alt="">
+                                </button>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -273,7 +391,6 @@
                                             App Store
                                         </p>
                                     </div>
-
                                 </a>
                             </li>
                             <li>
@@ -286,7 +403,6 @@
                                             Google Play
                                         </p>
                                     </div>
-
                                 </a>
                             </li>
                         </ul>
@@ -317,6 +433,7 @@
                             </ul>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
