--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -33,10 +33,10 @@
                     <a href="explore.html">Explore</a>
                 </li>
                 <li>
-                    <a href="index.html">About Us</a>
+                    <a href="about-us.html">About Us</a>
                 </li>
                 <li>
-                     <a href="contact-us.html">Contact Us</a>
+                    <a href="contact-us.html">Contact Us</a>
                 </li>
             </ul>
             <ul class="util">
@@ -305,7 +305,7 @@
     <!-- footer -->
     <footer>
         <div class="container">
-            <div class="row">
+            <div class="row m-0">
                 <div class="col-lg-4 col-12 p-2">
                     <div class="about_company">
                         <div class="logo">
@@ -326,27 +326,27 @@
                         <h3>Company</h3>
                         <ul>
                             <li>
-                                <a href="index.html">
+                                <a href="about-us.html">
                                     <span><i class="fa-light fa-arrow-up-right-from-square"></i></span> About us
                                 </a>
                             </li>
                             <li>
-                                <a href="index.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="faqs.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     FAQs
                                 </a>
                             </li>
                             <li>
-                                <a href="index.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="contact-us.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Contact us
                                 </a>
                             </li>
                             <li>
-                                <a href="index.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="terms.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Terms & Conditions
                                 </a>
                             </li>
                             <li>
-                                <a href="index.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
+                                <a href="privacy.html"><span><i class="fa-light fa-arrow-up-right-from-square"></i></span>
                                     Privacy & Policy
                                 </a>
                             </li>
@@ -443,7 +443,6 @@
                             </ul>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
